[project]
name = "computational-pwidths"
version = "0.1.0"
description = "Computing p-widths of Riemannian manifolds using persistent homology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "ripser>=0.6.1",
    "persim>=0.3.1",
    "gudhi>=3.8.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
